# FlagGems

./: .gitignore  CMakeLists.txt  pyproject.toml  setup.sh
.github/: CODEOWNERS  labeler.yml
.github/workflows/: backend-test.yaml  cpp-op-test.yaml  hugo-site.yaml  review-stats.yaml  unittest.yaml
benchmark/: base.py  bench_fused_add_rms_norm.py  conftest.py  core_shapes.yaml  performance_utils.py  test_abs.py  test_absolute.py  test_acos.py  test_add.py  test_addcdiv.py  test_addcmul.py  test_addmm.py  test_addmv.py  test_addr.py  test_alias_copy.py  test_all.py  test_allclose.py  test_amax.py  test_aminmax.py  test_angle.py  test_any.py  test_apply_repetition_penalties.py  test_apply_rotary_pos_emb.py  test_arange.py  test_arcsinh.py  test_arctanh.py  test_argmax.py  test_argmin.py  test_asinh.py  test_assert_async.py  test_atan.py  test_attention_perf.py  test_avg_pool2d.py  test_baddbmm.py  test_batch_norm.py  test_batch_norm_backward.py  test_bernoulli.py  test_binary_pointwise_perf.py  test_bincount.py  test_bitwise_and.py  (+269 more)
conf/: operators.yaml
docs/content/en/getting-started/: _index.md  install.md
docs/content/en/usage/: basic.md  cpp.md
docs/content/zh-cn/getting-started/: _index.md  install.md
docs/content/zh-cn/usage/: basic.md  cpp.md
include/flag_gems/: operators.h
lib/: CMakeLists.txt  act_quant.cpp  copy.cpp  fp8_matmul.cpp  fp8_matmul_direct.cpp
lib/pointwise_dynamic_cpp/: pointwise_prepare_args.h  prebuild_kernels.py
src/flag_gems/: __init__.py  fused_moe_mxq.py
src/flag_gems/csrc/: aten_patch.cpp  cstub.cpp
src/flag_gems/fused/: __init__.py  flashmla_sparse.py  fused_moe.py  sparse_attention.py
src/flag_gems/fused/DSA/: sparse_mla.py
src/flag_gems/fused/FLA/: fused_recurrent.py
src/flag_gems/fused/mhc/: __init__.py  hc_split_sinkhorn.py  mhc_bwd.py  mhc_post.py  mhc_pre.py
src/flag_gems/ops/: __init__.py  _is_all_true.py  add.py  addmm.py  aminmax.py  asinh.py  asinh_.py  atan2.py  baddbmm.py  bmm.py  clip.py  copysign.py  cosh.py  div.py  expm1.py  fp8_matmul.py  gcd.py  get_paged_mqa_logits_metadata.py  greater.py  hadamard_transform.py  isneginf.py  leaky_relu.py  log10.py  margin_ranking_loss.py  max_pool3d_with_indices.py  mean.py  mm.py  mul.py  mv.py  pixel_shuffle.py  quantile.py  rms_norm.py  roll.py  slice_backward.py  square.py  stack.py  sub.py  sum.py  topk.py  unique_consecutive.py  (+2 more)
src/flag_gems/patches/: patch_vllm_all.py
src/flag_gems/runtime/: __init__.py  configloader.py  register.py
src/flag_gems/runtime/backend/: __init__.py  backend_utils.py
src/flag_gems/runtime/backend/_ascend/: __init__.py
src/flag_gems/runtime/backend/_ascend/fused/: __init__.py  sparse_attention.py
src/flag_gems/runtime/backend/_ascend/ops/: __init__.py  all.py  hadamard_transform.py  matmul_bf16.py  matmul_int8.py  polar.py
src/flag_gems/runtime/backend/_cambricon/ops/: __init__.py  abs.py  add.py  addcdiv.py  addcmul.py  arange.py  avg_pool2d.py  ceil.py  celu.py  div.py  dropout.py  elu.py  exp2.py  fill.py  glu.py  kron.py  logical_and.py  logical_or.py  logspace.py  max_pool2d_with_indices.py  mean.py  mul.py  neg.py  pad.py  per_token_group_quant_fp8.py  quantile.py  randperm.py  relu.py  repeat.py  repeat_interleave.py  softmax.py  softplus.py  sort.py  sqrt.py  sub.py  sum.py  tan.py  threshold.py  to.py  topk.py  (+1 more)
src/flag_gems/runtime/backend/_cambricon/utils/: pointwise_dynamic.py
src/flag_gems/runtime/backend/_hygon/ops/: __init__.py  all.py  matmul_bf16.py
src/flag_gems/runtime/backend/_iluvatar/: __init__.py  op_black_list.yaml
src/flag_gems/runtime/backend/_iluvatar/fused/: __init__.py  sparse_attention.py
src/flag_gems/runtime/backend/_iluvatar/ops/: __init__.py  div.py  hadamard_transform.py  matmul_int8.py
src/flag_gems/runtime/backend/_kunlunxin/fused/: __init__.py  sparse_attention.py
src/flag_gems/runtime/backend/_kunlunxin/ops/: __init__.py  abs.py  acos.py  add.py  addcdiv.py  addcmul.py  addmm.py  addmv.py  apply_repetition_penalties.py  copy.py  digamma_.py  div.py  hadamard_transform.py  index_put.py  mul.py  nllloss.py  reflection_pad1d.py  reflection_pad2d.py  round.py  soft_margin_loss.py  sub.py  (+4 more)
src/flag_gems/runtime/backend/_mthreads/: addmm_mthreads_expand.yaml  bmm_mthreads_expand.yaml  heuristics_config_utils.py  mm_mthreads_expand.yaml  sparse_attention_mthreads_expand.yaml  tune_configs.yaml
src/flag_gems/runtime/backend/_nvidia/: tune_configs.yaml
src/flag_gems/runtime/backend/_tsingmicro/: __init__.py  heuristics_config_utils.py  tune_configs.yaml
src/flag_gems/utils/: __init__.py  libentry.py  pointwise_dynamic.py  triton_version_utils.py
tests/: conftest.py  test_abs.py  test_absolute.py  test_acos.py  test_add.py  test_addcdiv.py  test_addcmul.py  test_alias_copy.py  test_angle.py  test_apply_repetition_penalties.py  test_arange.py  test_arange_start.py  test_archsinh.py  test_arcsinh.py  test_arctanh.py  test_asinh.py  test_atan.py  test_atan2.py  test_binary_pointwise_ops.py  test_bitwise_and_scalar.py  test_bitwise_and_scalar_tensor.py  test_bitwise_and_tensor.py  test_bitwise_left_shift.py  test_bitwise_not.py  test_bitwise_or_scalar.py  test_bitwise_or_scalar_tensor.py  test_bitwise_or_tensor.py  test_bitwise_right_shift.py  test_blas_ops.py  test_ceil.py  test_celu.py  test_clamp.py  test_clamp_min.py  test_clamp_tensor.py  test_clip.py  test_copy.py  test_copysign.py  test_cos.py  test_cosh.py  test_cutlass_scaled_mm.py  (+127 more)
tests/test_DSA/: test_sparse_mla_ops.py
tools/: gpu_check_ascend.sh  gpu_check_hygon.sh  gpu_check_iluvatar.sh  gpu_check_kunlunxin.sh  gpu_check_mthreads.sh  gpu_check_thead.sh  gpu_check_tsingmicro.sh  run_backend_tests_ascend.sh  run_backend_tests_hygon.sh  run_backend_tests_iluvatar.sh  run_backend_tests_kunlunxin.sh  run_backend_tests_mthreads.sh  run_backend_tests_nvidia.sh  run_backend_tests_thead.sh  run_backend_tests_tsingmicro.sh  run_tests.py  set-env.sh  setup_ascend.sh  setup_hygon.sh  setup_iluvatar.sh  setup_kunlunxin.sh  setup_metax.sh  setup_mthreads.sh  setup_nvidia.sh  setup_thead.sh  setup_tsingmicro.sh  test-op.sh
(+52 files in other folders)
